[gd_scene load_steps=2 format=3 uid="uid://0c1lulcffl0b"]

[ext_resource type="Script" path="res://authentication.gd" id="1_xbave"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xbave")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 433.0
offset_top = 147.0
offset_right = 747.0
offset_bottom = 500.0

[node name="SateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Not Logged In"

[node name="EmailLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Log In"

[node name="SignInButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Register"

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SignInButton" to="." method="_on_sign_in_button_pressed"]
